# car-charging-reservation-system

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/src/api/: dependencies.py
backend/src/api/models/: cars.py
backend/src/api/routes/: auth.py  cars.py
backend/src/models/: car.py  user.py
docs/: index.md  system-behavior.md  (+1 more)
monolith/: Dockerfile  README.md  pyproject.toml
monolith/src/: database.py  main.py  utils.py
monolith/src/api/: router.py
monolith/src/api/models/: auth.py  cars.py
monolith/src/api/routes/: auth.py  cars.py
monolith/src/models/: car.py
monolith/src/static/: styles.css
monolith/src/templates/: base.html  car.html  car_add.html  dashboard.html  login.html
monolith/src/views/: auth_views.py  car_views.py  dashboard_views.py
monolith/tests/: test_main.py
system-test/: Dockerfile  conftest.py  docker-compose.yml  pyproject.toml
system-test/charging-points/: api.conf  data.json
system-test/tests/e2e-tests/: conftest.py  pytest.ini  test_api_auth.py  test_api_car.py  test_api_charging_points.py  test_api_reservations.py  test_ui_auth.py  test_ui_car.py  test_ui_dashboard.py
system-test/tests/smoke-tests/: conftest.py  test_basic.py
system_test/: __init__.py  channel.py  conftest.py  docker-compose.yml  pyproject.toml
system_test/charging-points/: api.conf  data.json
system_test/core/: channel_context.py  system_test_configuration.py  use_case_dsl.py
system_test/core/channels/: channel_context.py  channel_decorator.py  channel_type.py
system_test/core/clients/: client_factory.py
system_test/core/clients/commons/: http_test_client.py  page_test_client.py
system_test/core/clients/system/: __init__.py
system_test/core/clients/system/api/: __init__.py  (+1 more)
system_test/core/drivers/: driver_factory.py
system_test/core/drivers/commons/: result.py  result_assert.py
system_test/core/drivers/system/: system_driver.py
system_test/core/dsl/shared/: base_use_case.py  error_verification.py  response_verification.py  use_case_context.py  use_case_result.py  void_verification.py
system_test/core/dsl/system/: add_car.py  create_reservation.py  delete_car.py  get_reservation.py  go_to_system.py  list_cars.py  list_reservations.py  login.py  system_dsl.py  update_car.py
system_test/core/matchers/: result_matchers.py
system_test/core/scenario/impl/: scenario_dsl_impl.py
system_test/core/scenario/port/: scenario_dsl.py
system_test/tests/: conftest.py
system_test/tests/base/: base_e2e_test.py  base_scenario_dsl_test.py
system_test/tests/e2e_tests/: conftest.py  test_api_auth.py  test_api_car.py  test_api_e2e.py  test_api_reservations.py  test_base_e2e.py  test_car_negative.py  test_car_positive.py  test_e2e.py  test_login_negative.py  test_login_positive.py  test_reservation_negative.py  test_reservation_positive.py  test_ui_add_car_page.py  test_ui_cars_page.py  test_ui_e2e.py  test_ui_home_page.py  test_ui_login_page.py
system_test/tests/smoke_tests/: base_system_smoke_test.py  conftest.py  system_smoke_tests.py  test_api_smoke.py  test_system_api_smoke.py  test_system_smoke.py  test_system_ui_smoke.py  test_ui_smoke.py
(+96 files in other folders)
