[project]
name = "car-charging-system-test"
version = "0.1.0"
description = "System tests for Car Charging Reservation System"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "playwright>=1.55.0",
    "psycopg[binary]>=3.2.13",
    "pytest>=7.4.0",
    "pytest-env>=1.2.0",
    "pytest-playwright>=0.7.1",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "requests>=2.31.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]  
python_functions = ["test_*"]
addopts = "--base-url http://localhost:8080 -v"
env = [
    "CHARGING_POINTS_URL=http://localhost:8081", 
    "DB_HOST=localhost",
    "DB_PORT=5432",
    "DB_USER=test_user",
    "DB_PASSWORD=test_password",
    "DB_NAME=car_charging",
    "DATABASE_URL=postgresql+psycopg://test_user:test_password@localhost:5432/car_charging"
]
